<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/sensor_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/sensor_list" />

    <TextView
        android:id="@+id/acceleration_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/acceleration_device" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/accelerationLabelX"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:paddingLeft="5dp"
            android:text="@string/label_x" />

        <EditText
            android:id="@+id/accelleration_x"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:clickable="false"
            android:ems="10"
            android:inputType="none"
            android:longClickable="false"
            android:textSize="@dimen/value_textsize" />

        <TextView
            android:id="@+id/accelerationLabelY"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:paddingLeft="5dp"
            android:text="@string/label_y" />

        <EditText
            android:id="@+id/accelleration_y"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:clickable="false"
            android:ems="10"
            android:inputType="none"
            android:longClickable="false"
            android:textSize="@dimen/value_textsize" />

        <TextView
            android:id="@+id/accelerationLabelZ"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:paddingLeft="5dp"
            android:text="@string/label_z" />

        <EditText
            android:id="@+id/accelleration_z"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:clickable="false"
            android:ems="10"
            android:inputType="none"
            android:longClickable="false"
             android:textSize="@dimen/value_textsize" />

        </LinearLayout>

    <TextView
        android:id="@+id/gravity_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/gravity_device" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/gravityLabelX"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:paddingLeft="5dp"
            android:text="@string/label_x" />

        <EditText
            android:id="@+id/gravity_x"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:clickable="false"
            android:ems="10"
            android:inputType="none"
            android:longClickable="false"
             android:textSize="@dimen/value_textsize" />

        <TextView
            android:id="@+id/gravityLabelY"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:paddingLeft="5dp"
            android:text="@string/label_y" />

        <EditText
            android:id="@+id/gravity_y"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:clickable="false"
            android:ems="10"
            android:inputType="none"
            android:longClickable="false"
             android:textSize="@dimen/value_textsize" />

        <TextView
            android:id="@+id/gravityLabelZ"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:paddingLeft="5dp"
            android:text="@string/label_z" />

        <EditText
            android:id="@+id/gravity_z"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:clickable="false"
            android:ems="10"
            android:inputType="none"
            android:longClickable="false"
             android:textSize="@dimen/value_textsize" />

    </LinearLayout>

    <TextView
        android:id="@+id/magnetic_field_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/magnetic_field_device" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/magneticFieldLabelX"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:paddingLeft="5dp"
            android:text="@string/label_x" />

        <EditText
            android:id="@+id/magnetic_field_x"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:clickable="false"
            android:ems="10"
            android:inputType="none"
            android:longClickable="false"
             android:textSize="@dimen/value_textsize" />

        <TextView
            android:id="@+id/magneticFieldLabelY"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:paddingLeft="5dp"
            android:text="@string/label_y" />

        <EditText
            android:id="@+id/magnetic_field_y"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:clickable="false"
            android:ems="10"
            android:inputType="none"
            android:longClickable="false"
             android:textSize="@dimen/value_textsize" />

        <TextView
            android:id="@+id/magneticFieldLabelZ"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:paddingLeft="5dp"
            android:text="@string/label_z" />

        <EditText
            android:id="@+id/magnetic_field_z"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:clickable="false"
            android:ems="10"
            android:inputType="none"
            android:longClickable="false"
             android:textSize="@dimen/value_textsize" />
    </LinearLayout>

    <TextView
        android:id="@+id/light_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/light_device" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/light_x"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:clickable="false"
            android:ems="10"
            android:inputType="none"
            android:longClickable="false"
             android:textSize="@dimen/value_textsize" />

    </LinearLayout>

    <TextView
        android:id="@+id/proximity_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/proximity_device" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/proximity_x"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:clickable="false"
            android:ems="10"
            android:inputType="none"
            android:longClickable="false"
            android:textSize="@dimen/value_textsize" />

	</LinearLayout>

</LinearLayout>